Fix sort area in collections on mobile #265

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -108,3 +108,8 @@ p#main_gf_actions > a {
 #file_download figure img {
   width: 100%
 }
+
+.sort-toggle {
+  display: table;
+  width: 100%;
+}
